# DJIMotorHardwearInterface

./: .gitmodules  Readme.md
DJIMotorHardwearInterface/: CMakeLists.txt  DJIMotorHardwearInterface.xml  package.xml
DJIMotorHardwearInterface/include/DJIMotorHardwearInterface/: Canframeprocessor.hpp  DJIHardwearInterface.hpp
DJIMotorHardwearInterface/src/: CanFrameProcessor.cpp  DJIHardwearInterface.cpp  GM6020.cpp
DJIMotorHardwearInterface/submodule_lib/Candriver/: CMakeLists.txt
DJIMotorHardwearInterface/submodule_lib/Candriver/src/: candriver.cpp
DJIMotorHardwearInterface/submodule_lib/Candriver/test/: test_candriver_dm-J4310.cpp  test_candriver_listen.cpp  test_candriver_send.cpp
core/dji_motor_hardwear_interface/: CMakeLists.txt  Readme.md  dji_motor_hardwear_interface.xml  package.xml
core/dji_motor_hardwear_interface/include/dji_motor_hardwear_interface/: Canframeprocessor.hpp  DJIHardwearInterface.hpp
core/dji_motor_hardwear_interface/src/: C610.cpp  C620.cpp  CanFrameProcessor.cpp  DJIHardwearInterface.cpp  GM6020.cpp
core/dji_motor_hardwear_interface/test/config/: test_robot.ros2_control.xacro  test_robot.urdf
core/dm_motor_hardwear_interface/: CMakeLists.txt  Readme.md  dm_motor_hardwear_interface.xml  package.xml
core/dm_motor_hardwear_interface/include/dm_motor_hardwear_interface/: DMCanframeprocessor.hpp  DMHardwearInterface.hpp  utils.hpp
core/dm_motor_hardwear_interface/src/: DMCanframeprocessor.cpp  DMHardwearInterface.cpp  utils.cpp
core/dm_motor_hardwear_interface/test/config/: ros2_controller.yaml  test_robot.ros2_control.xacro  test_robot.urdf
core/dm_motor_hardwear_interface/test/launch/: test_launch.py
core/rm_interface/: CMakeLists.txt
core/rm_interface/msg/: MotorState.msg  RawCan.msg
dji_motor_hardwear_interface/: CMakeLists.txt
dji_motor_hardwear_interface/include/dji_motor_hardwear_interface/: Canframeprocessor.hpp  DJIHardwearInterface.hpp
dji_motor_hardwear_interface/src/: C620.cpp  DJIHardwearInterface.cpp  GM6020.cpp
dji_motor_hardwear_interface/submodule_lib/Candriver/test/: test_candriver_dm-J4310.cpp  test_candriver_send.cpp
dji_motor_hardwear_interface/test/config/: ros2_controller.yaml  test_robot.ros2_control.xacro  test_robot.urdf  test_robot.urdf.xacro
dji_motor_hardwear_interface/test/launch/: test_launch.py
rm_interface/: package.xml
